Skeleton API delegate implementation
