# src/main/resources/swagger/api.yml
@@ -9,11 +9,42 @@ components:
     bearerAuth:
       type: http
       scheme: bearer
+  schemas:
+      GameCreatedResponse:
+          properties:
+              id:
+                  type: integer
+              join_url:
+                  type: string
+          required:
+              - id
+              - join_url
+      ErrorMessageResponse:
+          properties:
+              message:
+                  type: string
+          required:
+              - message
+      TurnOrders:
+          properties:
+              orders:
+                  type: array
+                  items:
+                      type: object
+                      properties:
+                          placeholder:
+                              type: string
+      TurnResultsResponse:
+          properties:
+              placeholder:
+                  type: string
+
 security:
   - bearerAuth: []
 paths:
   /games:
     post:
+      operationId: createGame
       summary: create a new game
       responses:
         '200':
@@ -24,6 +55,7 @@ paths:
                 $ref: '#/components/schemas/GameCreatedResponse'
   /games/{id}:
     put:
+      operationId: joinGame
       summary: join a game
       parameters:
         - in: path
@@ -48,6 +80,7 @@ paths:
                 $ref: '#/components/schemas/ErrorMessageResponse'
   /turns/{id}:
     get:
+      operationId: turnResults
       summary: get turn results
       parameters:
         - in: path
@@ -63,6 +96,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/TurnResultsResponse' 
     post:
+      operationId: postOrders
       summary: post turn orders
       parameters:
         - in: path
@@ -85,34 +119,3 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorMessageResponse'
-components:
-  schemas:
-    GameCreatedResponse:
-      properties:
-        id:
-          type: integer
-        join_url:
-          type: string
-      required:  
-        - id
-        - join_url
-    ErrorMessageResponse:
-      properties:
-        message:
-          type: string
-      required:
-        - message
-    TurnOrders:
-      properties:
-        orders:
-          type: array
-          items:
-            type: object
-            properties:
-              placeholder:
-                type: string
-    TurnResultsResponse:
-      properties:
-        placeholder:
-          type: string
-
